# software-engineering-ws15

./: .gitignore  CMakeLists.txt  Makefile  README.md  celsiustofahrenheitconverter.cpp  celsiustofahrenheitconverter.hpp  celsiustokelvinconverter.cpp  celsiustokelvinconverter.hpp  command.hpp  converter.cpp  converter.hpp  converterfactory.hpp  currencyconverter.cpp  currencyconverter.hpp  currencydecorator.cpp  currencydecorator.hpp  dollartoeuroconverter.cpp  dollartoeuroconverter.hpp  dollartoyenconverter.cpp  dollartoyenconverter.hpp  eurotodollarconverter.cpp  eurotodollarconverter.hpp  fahrenheittocelsiusconverter.cpp  fahrenheittocelsiusconverter.hpp  inchtocentimeterconverter.cpp  inchtocentimeterconverter.hpp  inversion.cpp  lengthconverter.hpp  lengthdecorator.cpp  lengthdecorator.hpp  main.cpp  mainwithcomand.cpp  miletometerconverter.cpp  miletometerconverter.hpp  temperatureconverter.cpp  temperatureconverter.hpp  temperaturedecorator.cpp  temperaturedecorator.hpp  tests.cpp  tinytest.h  (+4 more)
include/: awesomeexception.cpp  celsiustofahrenheitconverter.cpp  celsiustofahrenheitconverter.hpp  celsiustokelvinconverter.cpp  celsiustokelvinconverter.hpp  command.hpp  converterfactory.hpp  currencyconverter.hpp  dollartoeuroconverter.cpp  dollartoeuroconverter.hpp  dollartoyenconverter.cpp  eurotodollarconverter.cpp  eurotodollarconverter.hpp  fahrenheittocelsiusconverter.cpp  fahrenheittocelsiusconverter.hpp  inchtocentimeterconverter.cpp  inchtocentimeterconverter.hpp  info.txt  inversion.hpp  lengthconverter.cpp  miletometerconverter.cpp  miletometerconverter.hpp  temperatureconverter.hpp  yardtometerconverter.cpp
src/: ctest.cpp  main.cpp  tests.cpp
tests/: Makefile  tests.cpp
